--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,7 @@
 nav {
 	.display-me();
 	font-size:2rem;
+	padding:1px;
 
 	a{
 		text-decoration:none;
